changed salmon ID to class and fixed section spacing on index

--- a/CSS/salesStyle.css
+++ b/CSS/salesStyle.css
@@ -62,10 +62,11 @@ table {
   color: darkblue;
 }
 
-#mainSalmon {
+.mainSalmon {
   display: block;
  width: 60%;
  margin: auto;
+ margin-bottom: 50px;
 }
 
 fieldset {
