--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,28 +65,34 @@ div {
 .text {
   font-family: Times, sans-serif;
   color: darkblue;
+  font-size: 18px;
 }
 
 .contact {
-  font-size: 20px;
+  font-size: 18px;
   font-family: Century, Arial, sans-serif;
   float: left;
   width: 30%;
+  height: 150px;
   padding: 15px;
+  margin: 2%;
+}
+
+#contactInfo {
+  text-align: center;
 }
 
 #cookies {
   border: black 3px dotted;
-  width: 25%;
+  width: 29%;
   margin: 2%;
   float: left;
 }
 
 #frosted {
   border: black 3px dotted;
-  width: 25%;
+  width: 29%;
   margin: 2%;
-  margin-top: 75px;
   float: left;
 }
 
@@ -96,8 +102,15 @@ div {
   height: 1px;
 }
 
-#mainSalmon {
+.mainSalmon {
   display: block;
  width: 60%;
  margin: auto;
+}
+
+#cutter {
+  float: left;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
